# openapi-schema-pydantic2

./: README.md  pyproject.toml  requirements.txt
openapi_schema_pydantic/v3/v3_0_3/: external_documentation.py  header.py  info.py  media_type.py  open_api.py  parameter.py  path_item.py  reference.py  request_body.py  schema.py  security_scheme.py  server_variable.py  util.py
openapi_schema_pydantic/v3/v3_1_0/: components.py  external_documentation.py  info.py  media_type.py  open_api.py  path_item.py  reference.py  schema.py  server_variable.py  xml.py
openapi_schema_pydantic2/v3/v3_0_3/: components.py  contact.py  encoding.py  example.py  license.py  link.py  oauth_flow.py  oauth_flows.py  operation.py  server.py  tag.py  xml.py
openapi_schema_pydantic2/v3/v3_1_0/: contact.py  discriminator.py  encoding.py  example.py  header.py  license.py  link.py  oauth_flow.py  operation.py  parameter.py  response.py  security_scheme.py
tests/: test_alias.py  test_config_example.py  test_example.py  test_swagger_openapi_v3.py
tests/schema_classes/: test_schema.py  test_security_scheme.py
tests/util/: test_pydantic_field.py  test_util.py
tests/v3_0_3/: test_config_example.py  test_util.py
tests/v3_1_0/: __init__.py
